# flutter-human-typing-guard

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dart-ci.yml  release.yml  rust-ci.yml
docs/: CONTRIBUTING.md  DEVELOPER_GUIDE.md  api-spec.md  human-heuristics.md  privacy-and-ethics.md
services/typing-guard-svc/: Cargo.toml  Dockerfile
services/typing-guard-svc/config/: default.toml
services/typing-guard-svc/src/: main.rs
services/typing-guard-svc/src/config/: mod.rs
services/typing-guard-svc/src/handlers/: config.rs  health.rs  mod.rs  score.rs
services/typing-guard-svc/src/middleware/: hmac.rs  mod.rs  rate_limit.rs
services/typing-guard-svc/src/models/: features.rs  mod.rs  payload.rs  response.rs
services/typing-guard-svc/tests/: integration_test.rs
